--- a/scss/atoms/_text.scss
+++ b/scss/atoms/_text.scss
@@ -82,5 +82,5 @@ p{
 .date{
     font-size: 11px;
     font-weight: 400;
-    margin-left: 8px;
+    margin-left: 0.7rem;
 }
