--- a/scss/config/_fonts.scss
+++ b/scss/config/_fonts.scss
@@ -1,5 +1,6 @@
 $font-size         : 1.6rem;
 $font-primary      : 'Lexend Deca', sans-serif;
+$font-secondary    : 'Poppins';
 $font-icon         : 'iconFont'; 
 
 // ==========================================================================
